2008-06-08  Ulf Jasper  <ulf.jasper@web.de>

	* net/newsticker.el: Split up into newsticker-backend, -ticker,
	-reader, -plainview, and -treeview.
	(newsticker-version): changed to 1.99

	* net/newsticker-backend.el: New. Moved backend functionality from
	newsticker.el to newsticker-backend.el
	(newsticker--download-logos): New.
	(newsticker--sentinel-callback): New.
	(newsticker--set-customvar): Removed. Split up into specific
	functions related to retrieval, ticker, buffer, and display.
	(newsticker--set-customvar-retrieval): New. Extracted from
	`newsticker--set-customvar'.
	(newsticker-retrieval): New. Renamed from `newsticker-feed'.
	(newsticker-url-list-defaults): Use
	`newsticker--set-customvar-retrieval' for :set. Changed :group.
	(newsticker-url-list): Doc changed. URL can be a function. Use
	`newsticker--set-customvar-retrieval' for :set. Changed :group.
	(newsticker-retrieval-method): New.
	(newsticker-wget-name): Changed :group.
	(newsticker-wget-arguments): Changed :group.
	(newsticker-retrieval-interval): Use
	`newsticker--set-customvar-retrieval' for :set. Changed :group.
	(newsticker-desc-comp-max): Changed :group.
	(newsticker--cache): Doc changed.
	(newsticker--guid-to-string): New.
	(newsticker--guid): Use `newsticker--guid-to-string'.
	(newsticker--real-feed-name): New.
	(newsticker--start-feed): New. Extracted from `newsticker-start'.
	(newsticker-start): Use `insert-file-contents' for reading
	cache. Use `newsticker--start-feed'.
	(newsticker--stop-feed): New. Extracted from `newsticker-stop'.
	(newsticker-stop): Check whether `newsticker-stop-ticker' is
	fbound. Use `newsticker--stop-feed'.
	(newsticker-save-item): New.
	(newsticker--get-news-by-funcall): New.
	(newsticker-get-news): Handle new retrieval methods.
	(newsticker--sentinel): Use `newsticker--sentinel-work'.
	(newsticker--sentinel-work): New. Extracted from
	`newsticker--sentinel'. Use `newsticker--download-logos',
	`newsticker--sentinel-callback'.